# unlimited-ocr-mac

./: .gitignore  README.md  pyproject.toml
.claude/skills/unlimited-ocr/: SKILL.md
.claude/skills/unlimited-ocr/evals/: evals.json
.claude/skills/unlimited-ocr/scripts/: ocr.py
